# SrcMake

./: Cargo.toml  build.rs  copytemplates.bat  post-build.sh  post_build.bat  readme.md  rustfmt.toml
languages/: C.cfg  CSharp.cfg  Cpp.cfg  Example.txt  Rust.cfg
languages/scripts/: C.lua  CSharp.lua  Cpp.lua  Example.lua  Rust.lua  SrcmakeDefines.lua
resources/: Srcmake.psd  res.lib  resources.rc
src/: envpath.rs  error.rs  lib.rs  main.rs  name.rs  paths.rs
src/app/: app.rs  data.rs  flags.rs  generator.rs  mod.rs  print.rs  version.rs
src/language/: help.rs  language.rs  mod.rs
templates/: CSharp_Main.src  CSharp_MonoBehaviour.src  CSharp_Struct.src  Cpp_ClassHeader.src  Cpp_Singleton03Header.src  Cpp_Singleton03Source.src  Cpp_SingletonHeader.src  Cpp_SingletonSource.src  Cpp_Struct.src  Cpp_TemplateHeader.src  Rust_Lib.src  Rust_Main.src  Rust_Trait.src
templates/C/: Header.h  Main.c  Source.c  Struct.h
templates/CSharp/: Class.cs  Interface.cs  Main.cs  MonoBehaviour.cs  ScriptableObject.cs  Singleton.cs  Struct.cs
templates/Cpp/: Class.cpp  Class.hpp  Header.hpp  Main.cpp  Singleton.cpp  Singleton.hpp  Singleton03.cpp  Singleton03.hpp  Source.cpp  Struct.hpp  Template.hpp  Template.inl
templates/Rust/: Lib.rs  Main.rs  Struct.rs  Trait.rs
