#
# Cargo.toml
#

[package]
name         = "srcmake"
version      = "0.2.0"
authors      = ["Michael Furlong"]
description  = "A templated source code generator."
readme       = "readme.md"
edition      = "2021"

[dependencies]
chrono     = "0.4.33"
num-traits = "0.2.17"
mlua       = { version="0.9.5", features=["lua54", "vendored"] }
parsecfg   = { git="https://github.com/BrokenShards/parsecfg.git", version="0.2.0" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
